force-app/main/default/objects/Contact/fields/Born_on__c.field-meta.xml
<CustomField>
    <fullName>Born_on__c</fullName>
    <label>Born on</label>
    <length>155</length>
    <type>Text</type>
</CustomField>