force-app/main/default/objects/Contact/fields/Died_On__c.field-meta.xml
<CustomField>
    <fullName>Died_On__c</fullName>
    <label>Died On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>