force-app/main/default/objects/Contact/fields/Is_Author__c.field-meta.xml
<CustomField>
    <fullName>Is_Author__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Author</label>
    <type>Checkbox</type>
</CustomField>