force-app/main/default/objects/Contact/fields/Wiki__c.field-meta.xml
<CustomField>
    <fullName>Wiki__c</fullName>
    <label>Wiki</label>
    <type>Url</type>
</CustomField>